--- a/index.html
+++ b/index.html
@@ -7,40 +7,27 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <title>QR Clue — Halloween Hunt</title>
 <style>
-  :root{
-    --bg:#000000;
-    --text:#f3f6fb;
-    --accent:#ff6a00;
-  }
-  *{box-sizing:border-box}
-
-  /* Global fullscreen+safe-area handling */
-  html,body{
-    height:100%;
-    margin:0;
-    color:var(--text);
-    background:var(--bg);
+  :root{ --vh: 100vh; }
+  *{ box-sizing: border-box; }
+  html, body{
+    margin:0; height:100%;
+    background:#000; color:#f3f6fb;
     font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     overscroll-behavior-y:none;
   }
-  /* Prefer dynamic viewport units */
-  .fill, #gate, #player, #content {
-    min-height: 100dvh;
-    min-height: 100svh;
-    min-height: 100lvh;
-    min-height: -webkit-fill-available;
+  /* Fullscreen layers use exact innerHeight */
+  #gate, #player, #content{
+    position:fixed; inset:0;
+    min-height: calc(var(--vh) * 1);
+    padding-top: calc(24px + env(safe-area-inset-top));
+    padding-bottom: calc(24px + env(safe-area-inset-bottom));
   }
-  body.no-scroll{ position:fixed; overflow:hidden; width:100%; }
-
-  /* Start gate */
+  /* Gate */
   #gate{
-    position:fixed; left:0; right:0; top:0; bottom:0;
     display:flex; align-items:center; justify-content:center;
-    padding:24px;
-    padding-top:calc(24px + env(safe-area-inset-top));
-    padding-bottom:calc(24px + env(safe-area-inset-bottom));
     background: radial-gradient(1200px 700px at 50% -10%, #111627 0%, #0b0f14 60%);
-    z-index:30;
+    z-index:1;                       /* LOWER than player */
+    transition: opacity .18s ease;   /* quick fade when hiding */
   }
   .card{
     width:min(820px, 92vw);
@@ -55,33 +42,26 @@
   .btn{
     -webkit-tap-highlight-color:transparent; display:inline-flex; align-items:center; gap:10px;
     padding:14px 18px; border:0; border-radius:14px; font-weight:800; font-size:1.05rem;
-    color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a);
+    color:#1a1a1a; background:linear-gradient(135deg, #ff6a00, #ff9f1a);
     box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25);
   }
-
-  /* Video layer */
-  #player{ position:fixed; left:0; right:0; top:0; bottom:0; background:#000; z-index:20; }
+  /* Player */
+  #player{ background:#000; z-index:999; display:none; } /* ON TOP */
   video{
-    position:absolute; left:0; right:0; top:0; bottom:0;
-    width:100%; height:100%;
-    object-fit:cover; object-position:center;
-    background:#000;
-    transition:opacity .9s ease;
+    position:absolute; inset:0; width:100%; height:100%;
+    object-fit:cover; object-position:center; background:#000;
+    transition: opacity .9s ease;
   }
   .fade-out{ opacity:0; }
-
-  /* Clue layer */
+  /* Clue */
   #content{
-    position:fixed; left:0; right:0; top:0; bottom:0;
     display:flex; align-items:center; justify-content:center;
-    padding:24px;
-    padding-top:calc(24px + env(safe-area-inset-top));
-    padding-bottom:calc(24px + env(safe-area-inset-bottom));
+    padding-left:24px; padding-right:24px;
     background:#000; z-index:10;
     opacity:0; filter: blur(6px); transform: translateY(6px);
     transition: opacity 1.5s ease, filter 1.5s ease, transform 1.5s ease;
   }
-  #content.reveal{ opacity:1; filter: blur(0px); transform: translateY(0); }
+  #content.reveal{ opacity:1; filter: blur(0); transform: translateY(0); }
   .clue-card{
     width:min(820px, 92vw);
     background:rgba(255,255,255,.06);
@@ -93,11 +73,12 @@
   .clue-meta{opacity:.85;margin-bottom:10px}
   .clue-text{white-space:pre-wrap;line-height:1.65}
   .clue-code{opacity:.9;font-style:italic;margin-top:10px}
-
   .hidden{display:none}
+  .center{display:flex; justify-content:center; margin-top:16px}
 </style>
 </head>
 <body>
+
   <!-- Gate -->
   <div id="gate">
     <div class="card">
@@ -107,12 +88,12 @@
     </div>
   </div>
 
-  <!-- Fullscreen Player (video only) -->
-  <div id="player" class="hidden">
+  <!-- Player -->
+  <div id="player">
     <video id="vid" src="./halloween.mp4" playsinline preload="auto"></video>
   </div>
 
-  <!-- Clue Content -->
+  <!-- Clue -->
   <div id="content">
     <div class="clue-card">
       <div class="clue-title">?</div>
@@ -124,68 +105,85 @@ where angels might tread, on the right-hand path, a clue is spread.
 Beyond eye's reach, a festive light gleams,
 Ascend to the top, where the mystery teems.</div>
       <div class="clue-code">Code: SugarPlumDreams (December 17th)</div>
+      <div class="center"><button id="replay" class="btn">↻ Replay</button></div>
     </div>
   </div>
 
 <script>
+/* Exact viewport height to remove bottom sliver */
+function setVH(){ document.documentElement.style.setProperty('--vh', window.innerHeight + 'px'); }
+window.addEventListener('resize', setVH);
+window.addEventListener('orientationchange', setVH);
+setVH();
+
 const gate = document.getElementById('gate');
 const player = document.getElementById('player');
 const content = document.getElementById('content');
 const startBtn = document.getElementById('start');
+const replayBtn = document.getElementById('replay');
 const vid = document.getElementById('vid');
 
-const VIDEO_LEN_MS = 25000; // adjust to your clip
-let fadeTimeout = null, endTimeout = null;
+const VIDEO_LEN_MS = 25000; // adjust to your clip length
+let fadeTimeout, endTimeout;
 
-function show(el){ el.classList.remove('hidden'); }
-function hide(el){ el.classList.add('hidden'); }
+function hide(el){ el.style.display = 'none'; }
+function show(el){ el.style.display = 'block'; }
+function lockScroll(){ document.body.style.position = 'fixed'; document.body.style.width = '100%'; }
+function clearTimers(){ clearTimeout(fadeTimeout); clearTimeout(endTimeout); }
+
+function hardHideGate(){
+  gate.style.opacity = '0';
+  gate.style.pointerEvents = 'none';
+  gate.style.zIndex = '0';
+  gate.setAttribute('aria-hidden','true');
+  setTimeout(()=>{ hide(gate); }, 180);
+}
+
+function playSequence(){
+  const FADE_MS = 900;
+  clearTimers();
+  fadeTimeout = setTimeout(()=> vid.classList.add('fade-out'),
+    Math.max(0, VIDEO_LEN_MS - FADE_MS));
+  endTimeout = setTimeout(revealClue, VIDEO_LEN_MS + 120);
+}
+
+function revealClue(){
+  try { vid.pause(); } catch(e){}
+  hide(player);
+  content.classList.add('reveal');
+  lockScroll();
+}
 
 function begin(){
-  // Hide gate, show player first, THEN try to play (ensures iOS gesture chain)
-  hide(gate); show(player);
+  // Show player first to keep iOS gesture chain, then nuke the gate
+  show(player);
+  hardHideGate();
 
-  try { vid.pause(); vid.currentTime = 0; } catch(_){}
-  const playPromise = vid.play();
-  if (playPromise && typeof playPromise.then === 'function') {
-    playPromise.then(()=> {
-      // only after playback is confirmed, lock scroll
-      document.body.classList.add('no-scroll');
-      scheduleFadeAndEnd();
-    }).catch(()=> {
-      // Tap video once more if iOS blocks autoplay after gesture for any reason
-      vid.addEventListener('click', ()=> {
-        vid.play().then(()=>{
-          document.body.classList.add('no-scroll');
-          scheduleFadeAndEnd();
-        });
-      }, { once:true });
-    });
+  try { vid.currentTime = 0; } catch(e){}
+  vid.classList.remove('fade-out');
+
+  const p = vid.play();
+  if (p && p.then){
+    p.then(()=>{ lockScroll(); playSequence(); })
+     .catch(()=>{ // if iOS still blocks, require one tap directly on the video
+       vid.addEventListener('click', ()=>{
+         vid.play().then(()=>{ lockScroll(); playSequence(); });
+       }, { once:true });
+     });
   } else {
-    document.body.classList.add('no-scroll');
-    scheduleFadeAndEnd();
+    lockScroll(); playSequence();
   }
 }
 
-function scheduleFadeAndEnd(){
-  const FADE_MS = 900;
-  clearTimeout(fadeTimeout); clearTimeout(endTimeout);
-  fadeTimeout = setTimeout(()=> vid.classList.add('fade-out'), Math.max(0, VIDEO_LEN_MS - FADE_MS));
-  endTimeout = setTimeout(()=>{
-    try { vid.pause(); } catch(_){}
-    hide(player);
-    content.classList.add('reveal');
-    document.body.classList.add('no-scroll');
-  }, VIDEO_LEN_MS + 120);
-}
-
-// Also handle natural 'ended' event in case duration differs
-vid.addEventListener('ended', ()=>{
-  hide(player);
-  content.classList.add('reveal');
-  document.body.classList.add('no-scroll');
-});
-
 startBtn.addEventListener('click', begin);
+vid.addEventListener('ended', revealClue);
+
+/* Replay */
+replayBtn.addEventListener('click', ()=>{
+  content.classList.remove('reveal');
+  show(player);
+  begin();
+});
 </script>
 </body>
 </html>
