--- a/index.html
+++ b/index.html
@@ -5,139 +5,138 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<title>QR Clue — Halloween Hunt</title>
+<title>Diagnose — Halloween Hunt</title>
 <style>
-  :root{ --bg:#000; --text:#f3f6fb; --accent:#ff6a00; }
-  *{box-sizing:border-box}
-  html,body{height:100%;margin:0;background:#000;color:var(--text);
-    font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+  :root{{ --bg:#000; --text:#f3f6fb; --accent:#ff6a00; }}
+  *{{box-sizing:border-box}}
+  html,body{{height:100%;margin:0;background:#000;color:var(--text);
+    font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif}}
 
-  /* Simple full-screen sections (original behavior) */
-  #gate,#player,#content{
-    position:fixed; inset:0;
-    display:flex; align-items:center; justify-content:center;
-    padding:24px;
-    background:#000;
-  }
-  #gate{ background: radial-gradient(1200px 700px at 50% -10%, #111627 0%, #0b0f14 60%); }
-  .card{
-    width:min(820px,92vw);
-    background:rgba(255,255,255,.06);
-    border:1px solid rgba(255,255,255,.12);
-    border-radius:16px; padding:20px;
-    box-shadow:0 12px 28px rgba(0,0,0,.45);
-    text-align:center;
-  }
-  .title{font-size:1.35rem;font-weight:900;margin-bottom:8px}
-  .meta{opacity:.9;margin:.25rem 0 1rem}
-  .btn{
-    -webkit-tap-highlight-color:transparent; display:inline-flex; align-items:center; gap:10px;
-    padding:14px 18px; border:0; border-radius:14px; font-weight:800; font-size:1.05rem;
-    color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a);
-    box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25);
-  }
+  #gate,#player,#content{{position:fixed; inset:0; display:flex; align-items:center; justify-content:center; padding:24px; background:#000}}
+  #gate{{ background: radial-gradient(1200px 700px at 50% -10%, #111627 0%, #0b0f14 60%); }}
+  .card{{ width:min(820px,92vw); background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12); border-radius:16px; padding:20px; box-shadow:0 12px 28px rgba(0,0,0,.45); text-align:center; }}
+  .title{{font-size:1.35rem;font-weight:900;margin-bottom:8px}}
+  .meta{{opacity:.9;margin:.25rem 0 1rem}}
+  .btn{{ -webkit-tap-highlight-color:transparent; display:inline-flex; align-items:center; gap:10px; padding:14px 18px; border:0; border-radius:14px; font-weight:800; font-size:1.05rem; color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a); box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25);}}
 
-  #player{ background:#000; }
-  video{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; background:#000; transition:opacity .9s ease; }
-  .fade-out{ opacity:0; }
+  #player{{ background:#000; }}
+  video{{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; background:#000; transition:opacity .9s ease; }}
+  .fade-out{{ opacity:0; }}
 
-  #content{ opacity:0; filter: blur(6px); transform: translateY(6px); transition: opacity 1.5s ease, filter 1.5s ease, transform 1.5s ease; }
-  #content.reveal{ opacity:1; filter: blur(0px); transform: translateY(0); }
-  .clue-card{
-    width:min(820px,92vw);
-    background:rgba(255,255,255,.06);
-    border:1px solid rgba(255,255,255,.12);
-    border-radius:16px; padding:20px;
-    box-shadow:0 12px 28px rgba(0,0,0,.45);
-  }
-  .clue-title{font-size:1.2rem;font-weight:900;margin-bottom:8px}
-  .clue-meta{opacity:.85;margin-bottom:10px}
-  .clue-text{white-space:pre-wrap;line-height:1.65}
-  .clue-code{opacity:.9;font-style:italic;margin-top:10px}
+  #content{{ opacity:0; filter: blur(6px); transform: translateY(6px); transition: opacity 1.5s ease, filter 1.5s ease, transform 1.5s ease; }}
+  #content.reveal{{ opacity:1; filter: blur(0px); transform: translateY(0); }}
+  .clue-card{{ width:min(820px,92vw); background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12); border-radius:16px; padding:20px; box-shadow:0 12px 28px rgba(0,0,0,.45); }}
 
-  .hidden{display:none}
-  .center{display:flex;justify-content:center;margin-top:16px}
+  .hidden{{display:none}}
+
+  /* On-screen diagnostic console */
+  #diag{{ position:fixed; left:0; right:0; top:0; z-index:9999; font:12px/1.4 ui-monospace, Menlo, monospace; background:rgba(0,0,0,.7); color:#0f0; padding:8px 10px; white-space:pre-wrap; max-height:40vh; overflow:auto; }}
+  #diag button{{ margin-left:8px; padding:6px 8px; border-radius:8px; border:1px solid #333; background:#111; color:#0f0; font-weight:700; }}
 </style>
 </head>
 <body>
 
-  <div id="gate">
-    <div class="card">
-      <div class="title">🎃 Halloween Hunt Start</div>
-      <div class="meta">Tap the button to start the <strong>October 2025 Halloween Scavenger Hunt Experience</strong>. Winner gets a <strong>$25 gift card!</strong></div>
-      <button id="start" class="btn"><span>🕷️</span> Start the Spook</button>
-    </div>
-  </div>
+<div id="diag">diag ready<button id="toggleControls">Show Controls</button><button id="reloadVideo">Reload Video</button></div>
 
-  <div id="player" class="hidden">
-    <video id="vid" src="./halloween.mp4" playsinline preload="auto"></video>
+<div id="gate">
+  <div class="card">
+    <div class="title">🎃 Halloween Hunt Start (Diagnose)</div>
+    <div class="meta">This build logs video events to help isolate the black-screen issue.</div>
+    <button id="start" class="btn"><span>🕷️</span> Start the Spook</button>
   </div>
+</div>
 
-  <div id="content" class="hidden">
-    <div class="clue-card">
-      <div class="clue-title">?</div>
-      <div class="clue-meta">Clue: 25/30 • Difficulty: 5/6</div>
-      <div class="clue-text">In the sacred alcove where prayers ascend,
-A box of reverence, where solace blends. Gaze upwards,
-where angels might tread, on the right-hand path, a clue is spread.
+<div id="player" class="hidden">
+  <video id="vid" playsinline preload="auto"></video>
+</div>
 
-Beyond eye's reach, a festive light gleams,
-Ascend to the top, where the mystery teems.</div>
-      <div class="clue-code">Code: SugarPlumDreams (December 17th)</div>
-      <div class="center"><button id="replay" class="btn">↻ Replay</button></div>
-    </div>
+<div id="content" class="hidden">
+  <div class="clue-card">
+    <div>Clue placeholder. If you can read this, reveal worked.</div>
   </div>
+</div>
 
 <script>
+const diag = document.getElementById('diag');
+function log(msg){{ diag.textContent += '\n' + msg; diag.scrollTop = diag.scrollHeight; }}
+function show(el){{ el.classList.remove('hidden'); }}
+function hide(el){{ el.classList.add('hidden'); }}
+
 const gate = document.getElementById('gate');
 const player = document.getElementById('player');
 const content = document.getElementById('content');
 const startBtn = document.getElementById('start');
-const replayBtn = document.getElementById('replay');
 const vid = document.getElementById('vid');
+const toggleControls = document.getElementById('toggleControls');
+const reloadVideoBtn = document.getElementById('reloadVideo');
 
-const VIDEO_LEN_MS = 25000; // set to your clip length
+const VIDEO_LEN_MS = 25000;
 let fadeTimeout, endTimeout;
 
-function show(el){ el.classList.remove('hidden'); }
-function hide(el){ el.classList.add('hidden'); }
-function clearTimers(){ clearTimeout(fadeTimeout); clearTimeout(endTimeout); }
+function wireVideo(){{
+  ['loadstart','loadedmetadata','loadeddata','canplay','canplaythrough','play','playing','timeupdate','pause','ended','stalled','waiting','suspend','emptied','error'].forEach(evt=>{{
+    vid.addEventListener(evt, ()=>{{
+      const nsMap = ['EMPTY','IDLE','LOADING','NO_SOURCE'];
+      const rsMap = ['HAVE_NOTHING','HAVE_METADATA','HAVE_CURRENT_DATA','HAVE_FUTURE_DATA','HAVE_ENOUGH_DATA'];
+      const ns = nsMap[vid.networkState] || vid.networkState;
+      const rs = rsMap[vid.readyState] || vid.readyState;
+      log(`[event] ${{evt}}: t=${{vid.currentTime.toFixed(2)}}s ns=${{ns}} rs=${{rs}}`);
+      if (evt==='error' && vid.error) log(`[error] code=${{vid.error.code}}`);
+    }});
+  }});
+}}
+wireVideo();
 
-function begin(){
-  hide(gate);
-  show(player);
-  try { vid.currentTime = 0; } catch(e){}
-  vid.classList.remove('fade-out');
+function freshenSrc(){{
+  const url = './halloween.mp4?v={ts}';
+  vid.removeAttribute('src'); vid.load();
+  vid.src = url;
+  log('set src → ' + url);
+}}
+freshenSrc();
 
-  const p = vid.play();
-  if (p && p.then){
-    p.then(()=> schedule()).catch(()=>{
-      // iOS fallback: require a tap on the video surface
-      vid.addEventListener('click', ()=>{ vid.play().then(schedule); }, { once:true });
-    });
-  } else {
-    schedule();
-  }
-}
+toggleControls.addEventListener('click', ()=>{{
+  if (!vid.hasAttribute('controls')){{ vid.setAttribute('controls',''); toggleControls.textContent='Hide Controls'; }}
+  else {{ vid.removeAttribute('controls'); toggleControls.textContent='Show Controls'; }}
+}});
 
-function schedule(){
+reloadVideoBtn.addEventListener('click', freshenSrc);
+
+function clearTimers(){{ clearTimeout(fadeTimeout); clearTimeout(endTimeout); }}
+
+function reveal(){{
+  try{{ vid.pause(); }}catch(e){{}}
+  hide(player); show(content);
+  requestAnimationFrame(()=> content.classList.add('reveal'));
+  log('reveal()');
+}}
+
+function schedule(){{
   const FADE_MS = 900;
   clearTimers();
   fadeTimeout = setTimeout(()=> vid.classList.add('fade-out'), Math.max(0, VIDEO_LEN_MS - FADE_MS));
   endTimeout = setTimeout(reveal, VIDEO_LEN_MS + 120);
-}
+  log('schedule() set');
+}}
 
-function reveal(){
-  try { vid.pause(); } catch(e){}
-  hide(player);
-  show(content);
-  // smooth reveal
-  requestAnimationFrame(()=> content.classList.add('reveal'));
-}
+function begin(){{
+  hide(gate); show(player);
+  try {{ vid.currentTime = 0; }} catch(e){{}}
+  vid.classList.remove('fade-out');
+
+  const p = vid.play();
+  if (p && p.then){{
+    p.then(()=>{{ log('play() → resolved'); schedule(); }})
+     .catch(()=>{{ log('play() → rejected — tapping video required'); vid.addEventListener('click', ()=> vid.play().then(()=>{{ log('video tap → play resolved'); schedule(); }}), {{ once:true }}); }});
+  }} else {{
+    log('play() not promise-like; scheduling');
+    schedule();
+  }}
+}}
 
 vid.addEventListener('ended', reveal);
 startBtn.addEventListener('click', begin);
-replayBtn.addEventListener('click', ()=>{ content.classList.remove('reveal'); hide(content); show(gate); });
 </script>
+
 </body>
 </html>
