--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>QR Clue — Halloween Hunt</title>
 <style>
-  :root{ --bg:#0b0f14; --panel:#0d121b; --text:#f3f6fb; --muted:#cbd5e1; --accent:#ff6a00; }
+  :root{ --bg:#0b0f14; --text:#f3f6fb; --accent:#ff6a00; }
   *{box-sizing:border-box}
   html,body{height:100%;margin:0;background:var(--bg);color:var(--text);
     font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif}
@@ -14,7 +14,8 @@
   .layer{position:fixed; inset:0; display:flex; align-items:center; justify-content:center; padding:24px;}
   #gate{background: radial-gradient(1200px 700px at 50% -10%, #111627 0%, #0b0f14 60%);}
   #player{background:#000; display:none;}
-  #content{background:#000; display:none; opacity:0; filter:blur(6px); transform:translateY(6px); transition:opacity 1.2s ease, filter 1.2s ease, transform 1.2s ease;}
+  #content{background:#000; display:none; opacity:0; filter:blur(6px); transform:translateY(6px);
+           transition:opacity 1.2s ease, filter 1.2s ease, transform 1.2s ease;}
   #content.reveal{opacity:1; filter:blur(0); transform:translateY(0);}
 
   /* Start card */
@@ -22,24 +23,21 @@
     border-radius:16px; padding:20px; text-align:center; box-shadow:0 12px 28px rgba(0,0,0,.45); }
   .title{font-size:1.35rem; font-weight:900; margin-bottom:8px}
   .meta{opacity:.92; margin:.25rem 0 1rem}
-  .btn{
-    -webkit-tap-highlight-color:transparent; display:inline-flex; align-items:center; gap:10px;
+  .btn{ -webkit-tap-highlight-color:transparent; display:inline-flex; align-items:center; gap:10px;
     padding:14px 18px; border:0; border-radius:14px; font-weight:800; font-size:1.05rem;
     color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a);
-    box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25);
-  }
+    box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25); }
 
-  /* Full bleed video */
-  video{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; object-position:center; background:#000; transition:opacity .9s ease; }
+  /* Full-bleed video */
+  video{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; object-position:center;
+          background:#000; transition:opacity .9s ease; }
   .fade-out{ opacity:0; }
 
-  /* Clue */
+  /* Clue card */
   .clue-card{ width:min(820px,92vw); background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12);
     border-radius:16px; padding:20px; box-shadow:0 12px 28px rgba(0,0,0,.45); }
   .clue-title{ font-weight:900; margin-bottom:6px }
-  .clue-meta{ opacity:.85; margin-bottom:10px }
   .clue-text{ white-space:pre-wrap; line-height:1.65 }
-  .clue-code{ opacity:.9; font-style:italic; margin-top:10px }
 </style>
 </head>
 <body>
@@ -55,22 +53,21 @@
 
 <!-- Video -->
 <div id="player" class="layer">
-  <!-- IMPORTANT: place halloween.mp4 next to this file -->
+  <!-- Keep this file next to index.html -->
   <video id="vid" src="./halloween.mp4" playsinline preload="auto"></video>
 </div>
 
 <!-- Clue -->
 <div id="content" class="layer">
   <div class="clue-card">
-    <div class="clue-title">?</div>
-    <div class="clue-meta">Clue: 25/30 • Difficulty: 5/6</div>
-    <div class="clue-text">In the sacred alcove where prayers ascend,
-A box of reverence, where solace blends. Gaze upwards,
-where angels might tread, on the right-hand path, a clue is spread.
+    <div class="clue-title">👻 Your Hunt Begins</div>
+    <div class="clue-text">Welcome to the October 2025 Halloween Scavenger Hunt.
 
-Beyond eye's reach, a festive light gleams,
-Ascend to the top, where the mystery teems.</div>
-    <div class="clue-code">Code: SugarPlumDreams (December 17th)</div>
+Rules:
+- No bedrooms.
+- Nothing in the office.
+- Everywhere else fair game.
+</div>
   </div>
 </div>
 
@@ -81,7 +78,7 @@ const content = document.getElementById('content');
 const startBtn = document.getElementById('start');
 const vid = document.getElementById('vid');
 
-// Duration of your clip (ms). Change if your video isn't ~25s.
+// Set to your real clip length in ms
 const VIDEO_LEN_MS = 25000;
 let fadeTimeout, endTimeout;
 
@@ -93,14 +90,12 @@ function revealClue(){
   try{ vid.pause(); }catch(e){}
   hide(player);
   show(content);
-  // trigger fade-in
   requestAnimationFrame(()=> content.classList.add('reveal'));
 }
 
 function scheduleFinish(){
   const FADE_MS = 900;
   clearTimers();
-  // Begin fade just before the end
   fadeTimeout = setTimeout(()=> vid.classList.add('fade-out'), Math.max(0, VIDEO_LEN_MS - FADE_MS));
   endTimeout = setTimeout(revealClue, VIDEO_LEN_MS + 120);
 }
@@ -108,19 +103,14 @@ function scheduleFinish(){
 function begin(){
   hide(gate);
   show(player);
-
   try{ vid.currentTime = 0; }catch(e){}
   vid.classList.remove('fade-out');
-
   const p = vid.play();
   if (p && typeof p.then === 'function'){
-    p.then(()=> scheduleFinish())
-     .catch(()=>{
-       // iOS manual confirmation tap if needed
-       vid.addEventListener('click', ()=>{
-         vid.play().then(()=> scheduleFinish());
-       }, { once:true });
-     });
+    p.then(()=> scheduleFinish()).catch(()=>{
+      // iOS fallback: require a single tap directly on the video
+      vid.addEventListener('click', ()=> vid.play().then(()=> scheduleFinish()), { once:true });
+    });
   } else {
     scheduleFinish();
   }
